Remove XML documentation build artefact.
This file is used in the build process (as it is embedded into the Assembly), but is a build artefact, not a part of the source code. File has been added to the gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# SharpSheets Project Specific Files
+## Scratch Testing project
+/Testing
+## XML documentation build artefact
+/SharpSheets/SharpSheets.xml
+
 # User-specific files
 *.rsuser
 *.suo
@@ -452,4 +458,3 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-/Testing
