--- a/SharpSheets/SharpSheets.csproj
+++ b/SharpSheets/SharpSheets.csproj
@@ -26,6 +26,11 @@
   </ItemGroup>
 	
   <ItemGroup>
+    <EmbeddedResource Include="Fonts\resources\LiberationSans-Bold.ttf" />
+    <EmbeddedResource Include="Fonts\resources\LiberationSans-BoldItalic.ttf" />
+    <EmbeddedResource Include="Fonts\resources\LiberationSans-Italic.ttf" />
+    <EmbeddedResource Include="Fonts\resources\LiberationSans-Regular.ttf" />
+    <EmbeddedResource Include="Fonts\resources\LICENSE.txt" />
     <EmbeddedResource Include="SharpSheets.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -37,6 +42,14 @@
 
   <ItemGroup>
     <EditorConfigFiles Remove="..\.editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Fonts\resources\LiberationSans-Bold.ttf" />
+    <None Remove="Fonts\resources\LiberationSans-BoldItalic.ttf" />
+    <None Remove="Fonts\resources\LiberationSans-Italic.ttf" />
+    <None Remove="Fonts\resources\LiberationSans-Regular.ttf" />
+    <None Remove="Fonts\resources\LICENSE.txt" />
   </ItemGroup>
 
 </Project>
