Implement font documentation.
Font documentation is now available in the documentation window. This includes metadata, license, trademarks, etc, along with a display of the available glyphs (capped at 8000 currently to avoid lag when loading large fonts, e.g. CJK fonts), and a list of the OpenType scripts, languages, and features. Font families still need a dedicated documentation page.

--- a/SharpEditor/SharpEditor.csproj
+++ b/SharpEditor/SharpEditor.csproj
@@ -51,8 +51,10 @@
     <None Remove="Documentation\Content\6 Markup\9 Markup Elements.sd" />
     <None Remove="Documentation\Content\6 Markup\Main.sd" />
     <None Remove="Documentation\Content\5 Cards\Main.sd" />
+    <None Remove="Documentation\Content\7 Fonts\Main.sd" />
     <None Remove="Documentation\Content\Main.sd" />
     <None Remove="Documentation\Content\Usage Notes.sd" />
+    <None Remove="Documentation\DocumentationBuilders\resources\Unicode\UnicodeData15-1-0.txt" />
     <None Remove="Highlighting\CardDefinitionHighlighting.xshd" />
     <None Remove="Highlighting\CardSubjectHighlighting.xshd" />
     <None Remove="Highlighting\CharacterSheetHighlighting.xshd" />
@@ -157,7 +159,9 @@
     <EmbeddedResource Include="Documentation\Content\6 Markup\Main.sd" />
     <EmbeddedResource Include="Documentation\Content\5 Cards\Main.sd" />
     <EmbeddedResource Include="Documentation\Content\6 Markup\9 Markup Elements.sd" />
+    <EmbeddedResource Include="Documentation\Content\7 Fonts\Main.sd" />
     <EmbeddedResource Include="Documentation\Content\Main.sd" />
+    <EmbeddedResource Include="Documentation\DocumentationBuilders\resources\Unicode\UnicodeData15-1-0.txt" />
     <EmbeddedResource Include="Highlighting\CardDefinitionHighlighting.xshd" />
     <EmbeddedResource Include="Highlighting\CardSubjectHighlighting.xshd" />
     <EmbeddedResource Include="Highlighting\CharacterSheetHighlighting.xshd" />
