Implement font outline reading (glyf and CFF).
Implementation for reading glyph outlines from glyf and CFF tables. These can then be used to display glyphs within the designer canvas, without the need for the WPF GlyphTypeface class. In future, this could also be used as a basis to implement variable font rendering, and font subsetting. Necessary updates have been made to SharpWPFDrawingCanvas, TypefaceGrouping, and the FontGraphicsRegistry.

--- a/GeboPDF/GeboPDF.csproj
+++ b/GeboPDF/GeboPDF.csproj
@@ -26,6 +26,7 @@
 	  <None Remove="Fonts\resources\afm\Times-Roman.afm" />
 	  <None Remove="Fonts\resources\afm\ZapfDingbats.afm" />
 	  <None Remove="Fonts\resources\mustRead.html" />
+	  <None Remove="Fonts\TrueType\resources\OpenType\adobeStandardStrings.txt" />
 	  <None Remove="Fonts\TrueType\resources\OpenType\featureTags.txt" />
 	  <None Remove="Fonts\TrueType\resources\OpenType\languageTags.txt" />
 	  <None Remove="Fonts\TrueType\resources\OpenType\scriptTags.txt" />
@@ -35,6 +36,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="Fonts\TrueType\resources\OpenType\adobeStandardStrings.txt" />
 	  <EmbeddedResource Include="Fonts\TrueType\resources\OpenType\featureTags.txt" />
 	  <EmbeddedResource Include="Fonts\TrueType\resources\OpenType\scriptTags.txt" />
 	</ItemGroup>
