--- a/SharpEditorAvalonia/SharpEditorAvalonia.csproj
+++ b/SharpEditorAvalonia/SharpEditorAvalonia.csproj
@@ -11,6 +11,91 @@
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
 
+  
+  <ItemGroup>
+    <AvaloniaXaml Remove="Documentation\DocumentationWindow.axaml" />
+  </ItemGroup>
+
+  
+  <ItemGroup>
+    <None Remove="Documentation\Content\1 Tutorial\1 Data Types.sd" />
+    <None Remove="Documentation\Content\1 Tutorial\2 Graphics State.sd" />
+    <None Remove="Documentation\Content\1 Tutorial\3 Handling Text.sd" />
+    <None Remove="Documentation\Content\1 Tutorial\4 Form Fields.sd" />
+    <None Remove="Documentation\Content\1 Tutorial\5 Using the Editor.sd" />
+    <None Remove="Documentation\Content\1 Tutorial\Main.sd" />
+    <None Remove="Documentation\Content\3 Widgets\Main.sd" />
+    <None Remove="Documentation\Content\4 Shapes\1 Boxes.sd" />
+    <None Remove="Documentation\Content\4 Shapes\2 Labelled Boxes.sd" />
+    <None Remove="Documentation\Content\4 Shapes\3 Titled Boxes.sd" />
+    <None Remove="Documentation\Content\4 Shapes\4 Title Styles.sd" />
+    <None Remove="Documentation\Content\4 Shapes\5 Bars.sd" />
+    <None Remove="Documentation\Content\4 Shapes\6 Usage Bars.sd" />
+    <None Remove="Documentation\Content\4 Shapes\7 Details.sd" />
+    <None Remove="Documentation\Content\4 Shapes\Main.sd" />
+    <None Remove="Documentation\Content\5 Cards\1 Configuration Tutorial.sd" />
+    <None Remove="Documentation\Content\5 Cards\2 Subjects Tutorial.sd" />
+    <None Remove="Documentation\Content\5 Cards\3 Configuration Elements.sd" />
+    <None Remove="Documentation\Content\5 Cards\4 Environments.sd" />
+    <None Remove="Documentation\Content\5 Cards\Main.sd" />
+    <None Remove="Documentation\Content\6 Markup\1 Paths.sd" />
+    <None Remove="Documentation\Content\6 Markup\2 Additional Features.sd" />
+    <None Remove="Documentation\Content\6 Markup\7 Environments.sd" />
+    <None Remove="Documentation\Content\6 Markup\8 Cookbook.sd" />
+    <None Remove="Documentation\Content\6 Markup\9 Markup Elements.sd" />
+    <None Remove="Documentation\Content\6 Markup\Main.sd" />
+    <None Remove="Documentation\Content\7 Fonts\1 Font List.sd" />
+    <None Remove="Documentation\Content\7 Fonts\2 Font Families.sd" />
+    <None Remove="Documentation\Content\7 Fonts\Main.sd" />
+    <None Remove="Documentation\Content\Main.sd" />
+    <None Remove="Documentation\DocumentationBuilders\resources\Unicode\UnicodeData15-1-0.txt" />
+    <None Remove="Highlighting\CardDefinitionHighlighting.xshd" />
+    <None Remove="Highlighting\CardSubjectHighlighting.xshd" />
+    <None Remove="Highlighting\CharacterSheetHighlighting.xshd" />
+    <None Remove="Highlighting\SBMLHighlighting.xshd" />
+    <None Remove="Highlighting\SharpConfigHighlighting.xshd" />
+  </ItemGroup>
+
+  
+  <ItemGroup>
+    <EmbeddedResource Include="Documentation\Content\1 Tutorial\1 Data Types.sd" />
+    <EmbeddedResource Include="Documentation\Content\1 Tutorial\2 Graphics State.sd" />
+    <EmbeddedResource Include="Documentation\Content\1 Tutorial\3 Handling Text.sd" />
+    <EmbeddedResource Include="Documentation\Content\1 Tutorial\4 Form Fields.sd" />
+    <EmbeddedResource Include="Documentation\Content\1 Tutorial\5 Using the Editor.sd" />
+    <EmbeddedResource Include="Documentation\Content\1 Tutorial\Main.sd" />
+    <EmbeddedResource Include="Documentation\Content\3 Widgets\Main.sd" />
+    <EmbeddedResource Include="Documentation\Content\4 Shapes\1 Boxes.sd" />
+    <EmbeddedResource Include="Documentation\Content\4 Shapes\2 Labelled Boxes.sd" />
+    <EmbeddedResource Include="Documentation\Content\4 Shapes\3 Titled Boxes.sd" />
+    <EmbeddedResource Include="Documentation\Content\4 Shapes\4 Title Styles.sd" />
+    <EmbeddedResource Include="Documentation\Content\4 Shapes\5 Bars.sd" />
+    <EmbeddedResource Include="Documentation\Content\4 Shapes\6 Usage Bars.sd" />
+    <EmbeddedResource Include="Documentation\Content\4 Shapes\7 Details.sd" />
+    <EmbeddedResource Include="Documentation\Content\4 Shapes\Main.sd" />
+    <EmbeddedResource Include="Documentation\Content\5 Cards\1 Configuration Tutorial.sd" />
+    <EmbeddedResource Include="Documentation\Content\5 Cards\2 Subjects Tutorial.sd" />
+    <EmbeddedResource Include="Documentation\Content\5 Cards\3 Configuration Elements.sd" />
+    <EmbeddedResource Include="Documentation\Content\5 Cards\4 Environments.sd" />
+    <EmbeddedResource Include="Documentation\Content\5 Cards\Main.sd" />
+    <EmbeddedResource Include="Documentation\Content\6 Markup\1 Paths.sd" />
+    <EmbeddedResource Include="Documentation\Content\6 Markup\2 Additional Features.sd" />
+    <EmbeddedResource Include="Documentation\Content\6 Markup\7 Environments.sd" />
+    <EmbeddedResource Include="Documentation\Content\6 Markup\8 Cookbook.sd" />
+    <EmbeddedResource Include="Documentation\Content\6 Markup\9 Markup Elements.sd" />
+    <EmbeddedResource Include="Documentation\Content\6 Markup\Main.sd" />
+    <EmbeddedResource Include="Documentation\Content\7 Fonts\1 Font List.sd" />
+    <EmbeddedResource Include="Documentation\Content\7 Fonts\2 Font Families.sd" />
+    <EmbeddedResource Include="Documentation\Content\7 Fonts\Main.sd" />
+    <EmbeddedResource Include="Documentation\Content\Main.sd" />
+    <EmbeddedResource Include="Documentation\DocumentationBuilders\resources\Unicode\UnicodeData15-1-0.txt" />
+    <EmbeddedResource Include="Highlighting\CardDefinitionHighlighting.xshd" />
+    <EmbeddedResource Include="Highlighting\CardSubjectHighlighting.xshd" />
+    <EmbeddedResource Include="Highlighting\CharacterSheetHighlighting.xshd" />
+    <EmbeddedResource Include="Highlighting\SBMLHighlighting.xshd" />
+    <EmbeddedResource Include="Highlighting\SharpConfigHighlighting.xshd" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.0.10" />
     <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.0.6" />
@@ -20,6 +105,12 @@
 
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Include="Documentation\DocumentationWindow.axaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <ItemGroup>
