--- a/SharpEditorAvalonia/SharpEditorAvalonia.csproj
+++ b/SharpEditorAvalonia/SharpEditorAvalonia.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <!--If you are willing to use Windows/MacOS native APIs you will need to create 3 projects.
     One for Windows with net7.0-windows TFM, one for MacOS with net7.0-macos and one with net7.0 TFM for Linux.-->
     <TargetFramework>net7.0</TargetFramework>
@@ -271,6 +271,9 @@
     </Compile>
     <Compile Update="Windows\TemplateErrorWindow.axaml.cs">
       <DependentUpon>TemplateErrorWindow.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Windows\ToolbarMessageBox.axaml.cs">
+      <DependentUpon>ToolbarMessageBox.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
