Add build script for publishing SharpEditor to different targets.
Currently builds for win-x64, win-x86, osx-x64, and linux-x64. Then zips the results into archives for upload. In future, could also package into MacOS application bundles, and/or .deb packages. Also added flag to prevent error when publishing into SharpEditor.csproj (caused by duplicated of SharpSheets.xml being copied into output directory, for some reason). Conditional property added to SharpEditor.csproj which sets OutputType to WinExe when publishing (accomplished through custom flag to `dotnet publish`, included in build script).

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+# From custom build script
+[Pp]ublished/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
